Starting implementation of generating AS bindings for C++ generated code
- As a separate process

--- a/CastleDBGen/CastleDBGen.csproj
+++ b/CastleDBGen/CastleDBGen.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AngelscriptWriter.cs" />
+    <Compile Include="ASBindingWriter.cs" />
     <Compile Include="BaseDBWriter.cs" />
     <Compile Include="CastleDB.cs" />
     <Compile Include="CppWriter.cs" />
